syntax = "proto3";

package iyag.io.chat;
option go_package = "chat";

import "google/protobuf/timestamp.proto";
import "iyag.io/chat/entry.proto";

message EventMeta {
    // specified by the client when they send a entry, for deduplication purpose
    string uuid = 1;
    // time when the event was sent (client side), updated when the server accepts it
    google.protobuf.Timestamp time = 2;
    // sequence in which the event was received by the server
    uint64 sequence = 3;
}

message ChannelState {
    EventMeta last_event = 1;
    repeated Entry entries = 2;
    repeated string author_ids = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp archived_at = 5;
    string created_by = 6;
    string archived_by = 7;
    string name = 8;
}

message ChannelUserEvent {
    message Create {
        string name = 1;
    }
    message Archive {}
    message Join {}
    message Leave {}
    message Type {}
    message Send {
        Entry entry = 1;
    }

    EventMeta meta = 100;
    string channel_name = 101;
    string author_id = 102;
    
    oneof event {
        Create created = 201;
        Archive archived = 202;
        Join joined = 203;
        Leave left = 204;
        Type typed = 205;
        Send sent = 206;
    }
}